# docstream

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml  docs.yml  publish.yml
api-reference/: index.html
api/convert/: index.html
architecture/: index.html
changelog/: index.html
contributing/: index.html
deployment/railway-vercel/: index.html
docker/: Dockerfile.dev  Dockerfile.prod
docs/: architecture.md  quickstart.md
docstream/: __init__.py  cli.py
docstream/core/: __init__.py  ai_provider.py  compiler.py  extractor.py  extractor_v2.py  format_router.py  generator.py  quality_checker.py  renderer.py  semantic_analyzer.py  structurer.py  template_matcher.py
docstream/core/format_handlers/: docx_handler.py  image_handler.py  markdown_handler.py  pdf_handler.py  pptx_handler.py  text_handler.py
docstream/models/: __init__.py  document.py
docstream/templates/: ieee.lua  report.lua  resume.lua
docstream/templates/skeletons/: ieee.tex  ieee_instructions.txt  report.tex  report_instructions.txt
getting-started/configuration/: index.html
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guide/providers/: index.html
guide/templates/: index.html
quickstart/: index.html
search/: search_index.json
self-hosting/: index.html
templates/: index.html
tests/: conftest.py  test_api.py  test_cli.py  test_extractor.py  test_format_handlers.py  test_renderer.py  test_semantic_analyzer.py  test_structurer.py
