[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "docstream"
version = "0.1.0"
description = "Professional document conversion library (PDF ↔ LaTeX)"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Your Name", email = "your.email@example.com" },
]
keywords = ["pdf", "latex", "document", "conversion", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: LaTeX",
    "Topic :: Scientific/Engineering",
    "Typing :: Typed",
]
requires-python = ">=3.11"
dependencies = [
    "pymupdf>=1.23.0",
    "pytesseract>=0.3.10",
    "google-generativeai>=0.8.0",
    "groq>=0.11.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/docstream"
Documentation = "https://docstream.readthedocs.io"
Repository = "https://github.com/yourusername/docstream"
"Bug Tracker" = "https://github.com/yourusername/docstream/issues"
Changelog = "https://github.com/yourusername/docstream/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["docstream", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "UP"]
ignore = [
    "E501",   # line too long (handled by formatter)
    "N802",   # function name should be lowercase (Lua bridge uses camelCase)
]

[tool.ruff.lint.isort]
known-first-party = ["docstream"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = ["tests/", "docs/"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["docstream"]
omit = ["tests/*", "docs/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
